# hygea

./: README.md
api/: Cargo.toml
api/entity/src/: checkin.rs  mod.rs  prelude.rs  symptom.rs  user.rs
api/migration/src/: lib.rs  m20250502_230938_create_user_table.rs  m20250505_120053_create_checkin.rs
api/src/lib/: application.rs  domain.rs  env.rs  infrastructure.rs
api/src/lib/application/: http.rs  openapi.rs  responses.rs  state.rs
api/src/lib/application/http/checkin/: errors.rs  handlers.rs  router.rs  validators.rs
api/src/lib/application/http/checkin/handlers/: create_checkin.rs
api/src/lib/application/http/user/: router.rs
api/src/lib/application/responses/: error.rs  response_body.rs  success.rs
api/src/lib/domain/: authentication.rs
api/src/lib/domain/checkin/: entities.rs  errors.rs  ports.rs  services.rs
api/src/lib/domain/checkin/entities/: dto.rs  mood.rs
api/src/lib/domain/user/: entities.rs  errors.rs  ports.rs  services.rs
api/src/lib/infrastructure/: checkin.rs  user.rs
api/src/lib/infrastructure/db/: postgres.rs
infrastructure/charts/hygea-stack/: Chart.yaml  values.yaml
infrastructure/charts/hygea-stack/charts/: cluster-0.2.0.tgz
infrastructure/charts/hygea-stack/templates/: NOTES.txt  _helpers.tpl
infrastructure/charts/hygea-stack/templates/postgres/: db-cluster.yaml
infrastructure/charts/infra/: Chart.yaml  values.yaml
infrastructure/terraform/: main.tf  variables.tf
infrastructure/terraform/dashboards/: keycloak_dashboard.json  rabbitmq_dashboard.json
(+2 files in other folders)
