[package]
name = "api"
version = "0.1.0"
edition = "2024"


[workspace]
members = [".", "entity", "migration"]

[[bin]]
path = "src/bin/main.rs"
name = "hygea-server"

[lib]
path = "src/lib/lib.rs"
name = "hygea"

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive", "env"] }
dotenv = "0.15.0"
sea-orm = { version = "1.1.10", features = ["sqlx-postgres", "macros", "with-uuid"] }
serde = "1.0.219"
serde_json = "1.0.140"
snafu = "0.8.5"
tokio = { version = "1.44.2", features = ["full", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
typeshare = "1.0.4"
uuid = { version = "1.16.0", features = ["serde", "v4", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "typed-routing"] }
axum-macros = "0.5.0"
utoipa = { version = "5.3.1", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
